--- a/angular/demo/styles.css
+++ b/angular/demo/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import '../../style/reset.css';
+@import '../../style/variable.css';
+@import '../../style/class.css';
