yz 模块的第一个组件, 二级菜单组件 menuTwo 完成, 功能完善且强大@0.0.4

--- a/angular/yz/menu-two/menu-two.component.css
+++ b/angular/yz/menu-two/menu-two.component.css
@@ -1,6 +1,14 @@
 :host {
+  overflow: auto;
   display: flex;
   flex-flow: column nowrap;
+}
+:host::-webkit-scrollbar {
+  width:5px;
+}
+:host::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: var(--light-blue);
 }
 
 .title {
