--- a/angular/demo/demo.component.html
+++ b/angular/demo/demo.component.html
@@ -1,1 +1,1 @@
-<menu-two [menuTwo]='menuTwo' [open]='true' [select]='["1", "3"]'></menu-two>
+<menu-two [menuTwo]='menuTwo' [open]='true' [select]='[1, 5]' (reselect)='getReselect($event)'></menu-two>
