yz 模块添加组件 singleChoice, 功能完善@0.0.6

--- a/angular/demo/demo.component.html
+++ b/angular/demo/demo.component.html
@@ -1,1 +1,6 @@
-<menu-two [menuTwo]='menuTwo' [open]='true' [select]='[1, 5]' (reselect)='getReselect($event)'></menu-two>
+<menu-two [menuTwo]='menuTwo' [open]='false' (reselect)='getMenu($event)'></menu-two>
+
+<div>
+  <single-choice *ngFor='let single of singleChoice' [singleChoice]='single' [select]='select' (reselect)='getSingle($event)'>
+  </single-choice>
+</div>
