--- a/angular/yz/single-choice/single-choice.component.html
+++ b/angular/yz/single-choice/single-choice.component.html
@@ -2,7 +2,7 @@
 
 <div class="lists">
   <div *ngFor='let list of singleChoice.list' class="list" [class.select]='list.id == select'
-    (click)='select=list.id; reselect.emit([singleChoice.id, list.id])'>
+    (click)='select=list.id; reselect.emit([singleChoice, list])'>
     {{list.title}}
   </div>
 </div>
