--- a/angular/demo/demo.component.css
+++ b/angular/demo/demo.component.css
@@ -1,12 +1,18 @@
 :host {
-  display: flex;
+  width: 100%;
   height: 100%;
+  display: block;
 }
 
 menu-two {
-  width: 350px;
+  border: 1px var(--dark-blue) solid;
 }
 
 single-choice {
+  border: 1px var(--dark-blue) solid;
+}
+
+count {
   width: 350px;
+  border: 1px var(--dark-blue) solid;
 }
