--- a/style/reset.css
+++ b/style/reset.css
@@ -1,8 +1,21 @@
 html, body {
   width: 100%;
   height: 100%;
+  cursor: default;
 }
 
 body {
   margin: 0;
+}
+
+input {
+  padding: 0;
+  background: none;
+  border: none;
+  outline: none;
+  box-sizing: border-box;
+}
+
+[type='button'] {
+  cursor: pointer;
 }
