删减冗余样式, 添加更好的视觉效果 @0.1.9

--- a/angular/demo/demo.component.css
+++ b/angular/demo/demo.component.css
@@ -5,14 +5,14 @@
 }
 
 menu-two {
-  border: 1px var(--dark-blue) solid;
+  width: 350px;
+  height: 100%;
 }
 
 single-choice {
-  border: 1px var(--dark-blue) solid;
+  width: 350px;
 }
 
 count {
   width: 350px;
-  border: 1px var(--dark-blue) solid;
 }
