--- a/angular/yz/count/count.component.html
+++ b/angular/yz/count/count.component.html
@@ -1,4 +1,4 @@
-<div class="title">{{count.title}}</div>
+<div class="title titleblock">{{count.title}}</div>
 
 <div class="count">
   <input type="button" value="+" (click)='count.value=count.value+1; resetCount.emit(count)'>
