--- a/angular/yz/count/count.component.css
+++ b/angular/yz/count/count.component.css
@@ -9,19 +9,8 @@
 .title {
   font-size: 1.1em;
 }
-.title::before {
-  content: '';
-  width: 3px;
-  height: 1em;
-  margin-right: 10px;
-  background: var(--dark-blue);
-  display: inline-block;
-  position: relative;
-  top: 2px;
-}
 
 .count {
-  padding-left: 10px;
   display: flex;
   gap: 10px;
 }
@@ -32,21 +21,16 @@
   height: 25px;
   border: 1px #000 solid;
   border-radius: 5px;
-  transition: all .5s;
-}
-[type='button']:hover {
-  color: var(--dark-blue);
-  border: 1px var(--dark-blue) solid;
-}
-[type='button']:active {
-  background: var(--light-blue);
-  box-shadow: 0 0 5px 5px var(--dark-blue);
+  transition: all .3s;
 }
 
 [type='text'] {
   width: 50px;
   text-indent: 10px;
 }
+
+[type='button']:hover,
 [type='text']:focus {
+  color: var(--dark-blue);
   border: 1px var(--dark-blue) solid;
 }
