yz 添加组件 map-legend @0.2.1

--- a/angular/demo/demo.component.html
+++ b/angular/demo/demo.component.html
@@ -2,4 +2,6 @@
 
 <!-- <single-choice [singleChoice]='singleChoice' [select]='1' (reselect)='getSingle($event)'></single-choice> -->
 
-<count *ngFor='let count of counts' [count]='count' (resetCount)='getCount($event)'></count>
+<!-- <count *ngFor='let count of counts' [count]='count' (resetCount)='getCount($event)'></count> -->
+
+<map-legend [height]="'100px'"></map-legend>
