改变颜色变量名, 为了实现主题切换(遥遥无期) @2.2.3

--- a/angular/yz/count/count.component.css
+++ b/angular/yz/count/count.component.css
@@ -31,6 +31,6 @@
 
 [type='button']:hover,
 [type='text']:focus {
-  color: var(--dark-blue);
-  border: 1px var(--dark-blue) solid;
+  color: var(--color-dark);
+  border: 1px var(--color-dark) solid;
 }
