瞎折腾了一下

--- a/angular/demo/demo.component.html
+++ b/angular/demo/demo.component.html
@@ -1,10 +1,10 @@
-<!-- <menu-two [menuTwo]='menuTwo' [select]='[1,1]' [open]='false' (reselect)='getMenu($event)'></menu-two> -->
+<menu-two [menuTwo]='menuTwo' [select]='[1,1]' [open]='false' (reselect)='getMenu($event)'></menu-two>
 
-<!-- <single-choice [singleChoice]='singleChoice' [select]='1' (reselect)='getSingle($event)'></single-choice> -->
+<single-choice [singleChoice]='singleChoice' [select]='1' (reselect)='getSingle($event)'></single-choice>
 
-<!-- <count *ngFor='let count of counts' [count]='count' (resetCount)='getCount($event)'></count> -->
+<count *ngFor='let count of counts' [count]='count' (resetCount)='getCount($event)'></count>
 
-<!-- <map-legend [height]="'100px'"></map-legend> -->
+<map-legend [height]="'100px'"></map-legend>
 
 <style>
   ul {
