--- a/angular/yz/menu-two/menu-two.component.css
+++ b/angular/yz/menu-two/menu-two.component.css
@@ -10,14 +10,14 @@
 }
 :host::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  background-color: var(--color-light);
+  background-color: var(--theme-light);
 }
 
 .title {
   height: 2.2em;
   padding: 0 10px;
   font-size: 1.1em;
-  background: var(--color-light);
+  background: var(--theme-light);
   transition: all .3s;
   display: flex;
   justify-content: space-between;
@@ -31,15 +31,15 @@
   transition: all .3s;
 }
 .list:hover {
-  color: var(--color-dark);
-  fill: var(--color-dark);
-  background: var(--color-light);
+  color: var(--theme-dark);
+  fill: var(--theme-dark);
+  background: var(--theme-light);
 }
 
 .select,
 .title:hover {
-  color: var(--color-dark);
-  fill: var(--color-dark);
+  color: var(--theme-dark);
+  fill: var(--theme-dark);
 }
 
 .titleblock::before {
@@ -51,5 +51,5 @@
 .select::before,
 .select>.titleblock::before {
   width: 3px;
-  background: var(--color-dark);
+  background: var(--theme-dark);
 }
