--- a/angular/yz/count/count.component.css
+++ b/angular/yz/count/count.component.css
@@ -31,6 +31,6 @@
 
 [type='button']:hover,
 [type='text']:focus {
-  color: var(--color-dark);
-  border: 1px var(--color-dark) solid;
+  color: var(--theme-dark);
+  border: 1px var(--theme-dark) solid;
 }
