s-menu 组件添加完成 @1.2.0

--- a/angular/demo/src/app/app.component.html
+++ b/angular/demo/src/app/app.component.html
@@ -1,1 +1,4 @@
-<count [value]='3' (valueChange)='getCount($event)'></count>
+<!-- <count [value]='3' (valueChange)='getCount($event)'></count> -->
+
+<s-menu [smenu]='smenu' [select]='[1, 1]' [open]='true' (reselect)='getSMenu($event)'></s-menu>
+<router-outlet></router-outlet>
