--- a/angular/yz/src/legend/legend.component.css
+++ b/angular/yz/src/legend/legend.component.css
@@ -1,13 +1,10 @@
 :host {
-  display: block;
+  display: flex;
+  gap: 20px;
+  flex-flow: column;
 }
 
-.title {
-  margin-bottom: 10px;
-  font-size: 1.1em;
-}
-
-.info {
+.box {
   --height: 200px;
   max-height: var(--height);
   display: flex;
@@ -18,10 +15,10 @@
 
 .legend {
   display: flex;
-  gap: 10px;
+  gap: 5px;
 }
 
-.image {
+.img {
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -29,7 +26,7 @@
 }
 
 img {
-  --color: #0f0;
+  --color: #000;
   width: 1em;
   height: 1em;
   background: var(--color);
