--- a/angular/yz/src/common/style/class.css
+++ b/angular/yz/src/common/style/class.css
@@ -52,3 +52,40 @@
   position: relative;
   top: 2px;
 }
+
+/* 背景遮罩 */
+.cloak {
+  z-index: 1000;
+}
+.cloak::after {
+  content: '';
+  width: 100%;
+  height: 100%;
+  background: var(--gray-dark);
+  opacity: .8;
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+/* 弹出 */
+.popup {
+  animation: popup .3s forwards;
+}
+@keyframes popup {
+  0% { transform: scale(0); }
+  50% { transform: scale(1.1); }
+  100% { transform: scale(1); }
+}
+
+/* 缩回 */
+.shrink {
+  animation: shrink .3s forwards;
+}
+@keyframes shrink {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.1); }
+  100% { transform: scale(0); }
+}
