--- a/angular/demo/src/app/app.component.html
+++ b/angular/demo/src/app/app.component.html
@@ -1,6 +1,6 @@
-<!-- <count [value]='3' (valueChange)='getCount($event)'></count> -->
+<count [value]='3' (valueChange)='getCount($event)'></count>
 
-<!-- <s-menu [smenu]='smenu' [select]='[1, 1]' [open]='true' (reselect)='getSMenu($event)'></s-menu>
-<router-outlet></router-outlet> -->
+<s-menu [smenu]='smenu' [select]='[1, 1]' [open]='true' (reselect)='getSMenu($event)'></s-menu>
+<router-outlet></router-outlet>
 
 <legend [height]="'300px'"></legend>
