添加组件 readonly-table @1.4.0

--- a/angular/demo/src/app/app.component.html
+++ b/angular/demo/src/app/app.component.html
@@ -1,6 +1,8 @@
-<count [value]='3' (valueChange)='getCount($event)'></count>
+<!-- <count [value]='3' (valueChange)='getCount($event)'></count> -->
 
-<s-menu [smenu]='smenu' [select]='[1, 1]' [open]='true' (reselect)='getSMenu($event)'></s-menu>
-<router-outlet></router-outlet>
+<!-- <legend [height]="'300px'"></legend> -->
 
-<legend [height]="'300px'"></legend>
+<readonly-table [body]='rtbody' [line]='10'></readonly-table>
+
+<!-- <s-menu [smenu]='smenu' [select]='[1, 1]' [open]='true' (reselect)='getSMenu($event)'></s-menu>
+<router-outlet></router-outlet> -->
