--- a/angular/demo/src/app/app.component.css
+++ b/angular/demo/src/app/app.component.css
@@ -1,9 +1,17 @@
 :host {
   width: 100%;
   height: 100%;
+  overflow: auto;
   display: flex;
   flex-flow: column;
   gap: 20px;
+  align-items: center;
+}
+
+count,
+legend,
+s-menu {
+  border: 1px solid var(--theme-dark);
 }
 
 s-menu {
