--- a/angular/yz/src/component/readonly-table/readonly-table.component.html
+++ b/angular/yz/src/component/readonly-table/readonly-table.component.html
@@ -1,19 +1,17 @@
 <div class="table">
 
-  <table>
+  <table class="headt">
     <tr>
       <th *ngFor='let h of head' [style.width]='h.width ? h.width : "auto"'>{{h.name}}</th>
     </tr>
   </table>
 
   <div class="body">
-
-    <table>
+    <table class="bodyt">
       <tr *ngFor='let b of trueBody'>
         <td *ngFor='let h of head' [style.width]='h.width ? h.width : "auto"'>{{b[h.field]}}</td>
       </tr>
     </table>
-
   </div>
 
 </div>
