--- a/angular/yz/src/component/s-menu/s-menu.component.html
+++ b/angular/yz/src/component/s-menu/s-menu.component.html
@@ -14,8 +14,8 @@
 
   <div class="lists" [class.heightmore]='m.open' [class.heightless]='!m.open'>
 
-    <a class="list titleblock" [class.select]='l.id == select[1]' *ngFor='let l of m.list' (click)='selected(m, l)'
-      [routerLink]="l.path" routerLinkActive="select">
+    <a class="list titleblock" [class.select]='l.id == select[1] && m.id == select[0]' *ngFor='let l of m.list'
+      (click)='selected(m, l)' [routerLink]="l.path" routerLinkActive="select">
       {{l.title}}
     </a>
 
