--- a/angular/yz/src/common/style/class.css
+++ b/angular/yz/src/common/style/class.css
@@ -57,7 +57,7 @@
 .cloak {
   width: 100%;
   height: 100%;
-  background: rgba(100, 100, 100, .8);
+  background: #666666cc;
   display: block;
   position: fixed;
   top: 0;
