--- a/angular/yz/src/component/readonly-table/readonly-table.component.css
+++ b/angular/yz/src/component/readonly-table/readonly-table.component.css
@@ -14,11 +14,10 @@ table {
 }
 
 tr:nth-child(2n + 1) {
-  background: var(--theme-light);
+  background: var(--gray-light);
 }
 
 th {
-  color: var(--theme-dark);
   text-align: start;
   border: 1px solid var(--gray-middle);
   border-bottom: none;
