--- a/angular/yz/src/component/readonly-table/page/page.component.css
+++ b/angular/yz/src/component/readonly-table/page/page.component.css
@@ -1,5 +1,5 @@
 :host {
-  width: 170px;
+  width: 200px;
   height: 30px;
   display: flex;
   gap: 5px;
@@ -7,24 +7,26 @@
   align-items: center;
 }
 
-.count-btn {
-  flex: 1 0 25px;
+.page-btn {
+  flex: 1;
   height: 100%;
-  border: none;
+  border: 1px solid var(--gray-middle);
+  border-radius: 5px;
   transition: all .3s;
 }
 
-.count-text {
-  flex: 6 0 50px;
-  min-width: 50px;
+.page-text {
+  flex: 2;
+  width: 60px;
   height: 100%;
-  border: none;
-  border-color: var(--theme-dark);
   text-indent: 5px;
+  border: 1px solid var(--gray-middle);
+  border-radius: 5px;
   transition: all .3s;
 }
 
-.count-btn:hover,
-.count-text:focus {
+.page-btn:hover,
+.page-text:focus {
   color: var(--theme-dark);
+  border-color: var(--theme-dark);
 }
