yz 模块组件整体梳理 @1.4.3

--- a/angular/yz/src/component/count/count.component.css
+++ b/angular/yz/src/component/count/count.component.css
@@ -1,35 +1,32 @@
 :host {
-  width: 100px;
+  width: 110px;
   height: 25px;
   display: flex;
   gap: 5px;
-  justify-content: space-between;
-  align-items: center;
 }
 
-.count-btn {
+.c-btn {
   flex: 1 0 25px;
   height: 100%;
-  color: var(--theme-dark);
-  border-color: var(--theme-dark);
-  border-radius: 10px;
+  color: var(--gray-dark);
+  border-color: var(--gray-middle);
+  border-radius: 5px;
   transition: all .3s;
 }
 
-.count-text {
+.c-text {
   flex: 6 0 50px;
   min-width: 50px;
   height: 100%;
-  color: var(--theme-dark);
-  border-color: var(--theme-dark);
+  color: var(--gray-dark);
+  border-color: var(--gray-middle);
   text-indent: 5px;
-  border-radius: 10px;
+  border-radius: 5px;
   transition: all .3s;
 }
 
-.count-btn:hover,
-.count-text:focus {
-  color: #fff;
-  background: var(--theme-dark);
-  border-color: #fff;
+.c-btn:hover,
+.c-text:focus {
+  color: var(--theme-dark);
+  border-color: var(--theme-dark);
 }
