--- a/angular/yz/src/component/count/count.component.html
+++ b/angular/yz/src/component/count/count.component.html
@@ -1,5 +1,5 @@
-<input class="count-btn" type="button" value="+" (click)='add()'>
+<input class="c-btn" type="button" value="+" (click)='add()'>
 
-<input class="count-text" type="text" [value]="value" (input)='setValue($event)'>
+<input class="c-text" type="text" [value]="value" (input)='setValue($event)'>
 
-<input class="count-btn" type="button" value="-" (click)='sub()'>
+<input class="c-btn" type="button" value="-" (click)='sub()'>
