--- a/angular/yz/src/component/legend/legend.component.html
+++ b/angular/yz/src/component/legend/legend.component.html
@@ -1,11 +1,13 @@
-<div>图例</div>
+<div class="title">图例</div>
 
-<div class="box" [style.--height]="height">
+<div class="main" [style.--height]="height">
 
   <div class="legend" *ngFor='let l of legend'>
 
     <div class="img">
-      <img [src]="l.url" alt="no" [style.--color]="l.color" [style.background]="l.url && 'none'">
+
+      <img [src]="l.url" [style.--color]="l.color" [style.background]="l.url ? l.url : l.color">
+
     </div>
 
     <span>{{l.text}}</span>
