--- a/angular/demo/src/app/app.component.css
+++ b/angular/demo/src/app/app.component.css
@@ -3,12 +3,24 @@
   height: 100%;
   background: #fff;
   overflow: auto;
+  display: block;
+}
+
+.main {
+  width: 100%;
+  height: 100%;
   display: flex;
-  flex-flow: column;
-  gap: 20px;
-  align-items: center;
 }
 
 s-menu {
   width: 350px;
+  height: 100%;
+  background: var(--gray-light);
+  overflow: auto;
+}
+
+.router {
+  width: calc(100% - 350px);
+  height: 100%;
+  padding: 20px;
 }
