--- a/angular/demo/src/app/app.component.html
+++ b/angular/demo/src/app/app.component.html
@@ -1,8 +1,15 @@
+<div class="main">
+
+  <s-menu [smenu]='smenu' [open]='true' (reselect)='getSMenu($event)'></s-menu>
+
+  <div class="router">
+
+    <router-outlet></router-outlet>
+
+  </div>
+
+</div>
+
 <!-- <count [value]='3' (valueChange)='getCount($event)'></count> -->
 
 <!-- <legend [height]="'300px'"></legend> -->
-
-<readonly-table [body]='rtbody' [line]='10'></readonly-table>
-
-<!-- <s-menu [smenu]='smenu' [select]='[1, 1]' [open]='true' (reselect)='getSMenu($event)'></s-menu>
-<router-outlet></router-outlet> -->
