--- a/angular/yz/src/component/readonly-table/readonly-table.component.css
+++ b/angular/yz/src/component/readonly-table/readonly-table.component.css
@@ -59,15 +59,15 @@ th {
 
 sort {
   width: calc(100% - 390px);
-  height: 100%;
+  height: 30px;
 }
 
 search {
   width: 150px;
-  height: 100%;
+  height: 30px;
 }
 
 page {
   width: 200px;
-  height: 100%;
+  height: 30px;
 }
