readonly-table 组件 bug 修复

--- a/angular/yz/src/component/readonly-table/sort/sort.component.css
+++ b/angular/yz/src/component/readonly-table/sort/sort.component.css
@@ -57,14 +57,16 @@
 }
 
 .sort:hover {
-  color: var(--theme-dark);
+  background: var(--gray-light);
   cursor: pointer;
 }
 
 .shengxu {
+  color: var(--theme-dark);
   border-color: var(--theme-dark);
 }
 
 .jiangxu {
+  color: var(--theme-light);
   border-color: var(--theme-light);
 }
