--- a/angular/yz/src/component/readonly-table/readonly-table.component.html
+++ b/angular/yz/src/component/readonly-table/readonly-table.component.html
@@ -1,6 +1,6 @@
 <div class="tables">
 
-  <table class="headt">
+  <table>
     <tr>
       <th *ngFor='let h of head' [style.width]='h.width ? h.width : "auto"'>{{h.name}}</th>
     </tr>
@@ -8,7 +8,7 @@
 
   <div class="body">
 
-    <table class="bodyt">
+    <table>
       <tr *ngFor='let p of pbody'>
         <td *ngFor='let h of head' [style.width]='h.width ? h.width : "auto"'>{{p[h.field]}}</td>
       </tr>
