修改 readonly-table 为 better-table, 添加点击选中行的功能 @1.4.5

--- a/angular/demo/src/app/app.component.html
+++ b/angular/demo/src/app/app.component.html
@@ -13,3 +13,5 @@
 <!-- <count [value]='3' (valueChange)='getCount($event)'></count> -->
 
 <!-- <legend [height]="'300px'"></legend> -->
+
+<better-table [click]='true' [id]='1' (clickTr)='clickTr($event)'></better-table>
