升级 s-menu 为 super-menu 组件(技术限制)

--- a/angular/demo/src/app/app.component.html
+++ b/angular/demo/src/app/app.component.html
@@ -14,4 +14,4 @@
 
 <!-- <legend [height]="'300px'"></legend> -->
 
-<better-table [click]='true' [id]='1' (clickTr)='clickTr($event)'></better-table>
+<!-- <better-table [click]='true' [id]='1' (clickTr)='clickTr($event)'></better-table> -->
