--- a/angular/yz/src/common/style/style.css
+++ b/angular/yz/src/common/style/style.css
@@ -142,19 +142,15 @@ label { cursor: pointer; }
 }
 
 /* 上升 */
-.upup {
-  animation: upup .3s forwards;
-}
+.upup { animation: upup .3s forwards; }
 @keyframes upup {
-  0% { opacity: 0; transform: translateY(10px); }
+  0% { opacity: 0; transform: translateY(20px); }
   100% { opacity: 1; transform: translateY(0px); }
 }
 
 /* 下降 */
-.downdown {
-  animation: downdown .3s forwards;
-}
+.downdown { animation: downdown .3s forwards; }
 @keyframes downdown {
   0% { opacity: 1; transform: translateY(0px); }
-  100% { opacity: 0; transform: translateY(10px); }
+  100% { opacity: 0; transform: translateY(20px); }
 }
