添加组件 play-bar @1.7.0

--- a/angular/demo/app/app.component.html
+++ b/angular/demo/app/app.component.html
@@ -15,3 +15,5 @@
 <!-- <legend [height]="'300px'"></legend> -->
 
 <!-- <better-table [click]='true' [id]='1' (clickTr)='clickTr($event)'></better-table> -->
+
+<!-- <play-bar (onplaybar)="onplaybar($event)"></play-bar> -->
