--- a/angular/yz/common/style/style.css
+++ b/angular/yz/common/style/style.css
@@ -4,7 +4,7 @@
   --theme-dark: #1b8fff;
   --theme-light: #eff8ff;
 
-  --gray-dark: #666;
+  --gray-dark: #555;
   --gray-middle: #d9d9d9;
   --gray-light: #f9f9f9;
 }
@@ -31,7 +31,10 @@ body {
 a {
   color: var(--gray-dark);
   text-decoration: none;
+  transition: all .3s;
 }
+
+a:hover { color: var(--theme-dark); }
 
 input[type='button'] {
   color: inherit;
@@ -114,11 +117,10 @@ label { cursor: pointer; }
   background: var(--theme-dark);
   transition: all .3s;
   display: inline-block;
-  position: relative;
-  top: 20%;
 }
 
 /* 背景遮罩 */
+
 .cloak {
   width: 100%;
   height: 100%;
@@ -136,7 +138,7 @@ label { cursor: pointer; }
 
 @keyframes popup {
   0% { transform: scale(0); }
-  85% { transform: scale(1.2); }
+  85% { transform: scale(1.1); }
   100% { transform: scale(1); }
 }
 
@@ -146,7 +148,7 @@ label { cursor: pointer; }
 
 @keyframes shrink {
   0% { transform: scale(1); }
-  85% { transform: scale(1.2); }
+  85% { transform: scale(1.1); }
   100% { transform: scale(0); }
 }
 
