--- a/angular/yz/common/style/style.css
+++ b/angular/yz/common/style/style.css
@@ -55,6 +55,33 @@ input[type='text'] {
 [type='radio'],
 label { cursor: pointer; }
 
+/* common class */
+
+/* 醒目的标题识别块 */
+
+.titleblock::before {
+  content: '';
+  width: 3px;
+  height: 0.8em;
+  margin-right: 10px;
+  background: var(--theme-dark);
+  transition: all .3s;
+  display: inline-block;
+}
+
+/* 背景遮罩 */
+
+.cloak {
+  width: 100%;
+  height: 100%;
+  background: #666666cc;
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+}
+
 /* css animation */
 
 /* 顺时针旋转 */
@@ -107,31 +134,6 @@ label { cursor: pointer; }
   to { max-height: var(--maxheight);  opacity: 1; }
 }
 
-/* 醒目的标题识别块 */
-
-.titleblock::before {
-  content: '';
-  width: 3px;
-  height: 0.8em;
-  margin-right: 10px;
-  background: var(--theme-dark);
-  transition: all .3s;
-  display: inline-block;
-}
-
-/* 背景遮罩 */
-
-.cloak {
-  width: 100%;
-  height: 100%;
-  background: #666666cc;
-  display: block;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1000;
-}
-
 /* 弹出 */
 
 .popup { animation: popup .3s forwards; }
@@ -150,6 +152,24 @@ label { cursor: pointer; }
   0% { transform: scale(1); }
   85% { transform: scale(1.1); }
   100% { transform: scale(0); }
+}
+
+/* 淡入 */
+
+.slowshow { animation: slowshow .3s forwards; }
+
+@keyframes slowshow {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+/* 淡出 */
+
+.slowopacity { animation: slowopacity .3s forwards; }
+
+@keyframes slowopacity {
+  0% { opacity: 1; }
+  100% { opacity: 0; }
 }
 
 /* 上升显示 */
